--- a/templates/reset_view.html
+++ b/templates/reset_view.html
@@ -45,7 +45,7 @@
                                 <span class="input-group-addon">
                                     <i class="now-ui-icons users_circle-08"></i>
                                 </span>
-                                <input type="text" class="form-control" name="username">
+                                <input type="text" class="form-control" name="username" value="test">
                             </div>
                         </div>
                         <div class="form-actions">
